<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp">

    <TextView
        android:id="@+id/customer_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/CustomerName"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/customer_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/CustomerAge"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/customer_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/ActiveStatus"
        android:textAlignment="center"
        android:textSize="16sp" />

</LinearLayout>

